--- a/testing/integration/tests/fil-create-actor/Cargo.toml
+++ b/testing/integration/tests/fil-create-actor/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 fvm_sdk = { version = "3.0.0-alpha.24", path = "../../../../sdk" }
 fvm_shared = { version = "3.0.0-alpha.20", path = "../../../../shared" }
-actors_v10_runtime = { package = "fil_actors_runtime", git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = ["m2-native"] }
+actors_v10_runtime = { package = "fil_actors_runtime", git = "https://github.com/filecoin-project/builtin-actors", branch = "next", features = [] }
 
 [build-dependencies]
 substrate-wasm-builder = "4.0.0"
